<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        style="@style/Text.Small"
        android:paddingTop="@dimen/base_padding_4x"
        android:paddingBottom="@dimen/base_padding_2x"
        android:paddingLeft="@dimen/base_padding_4x"
        android:paddingRight="@dimen/base_padding_4x"
        android:layout_width="match_parent">

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/extra_view_profile">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_avatar"
                android:contentDescription="@null" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/base_padding_2x"
                android:gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    style="@style/Text.Medium"
                    android:layout_marginBottom="@dimen/base_padding_2x"
                    android:text="User name here" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_your_profile"
                    android:id="@+id/textView3"
                    style="@style/Text.Small.Muted" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:layout_marginTop="@dimen/base_padding_2x"
            android:layout_marginBottom="@dimen/base_padding_4x" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_jobs"
                android:id="@+id/textView4"
                style="@style/Text.Small.Muted" />

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView4"
                    android:src="@drawable/ic_action_working_briefcase"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_viewed_jobs"
                    android:id="@+id/textView5"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_working_briefcase"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alerted_job"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_working_briefcase"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_jobs"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_working_briefcase"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/applied_jobs"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:layout_marginTop="@dimen/base_padding_2x"
            android:layout_marginBottom="@dimen/base_padding_4x" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage"
                style="@style/Text.Small.Muted" />

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_tab_search"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_history"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/base_padding_2x"
                android:paddingBottom="@dimen/base_padding_2x">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_action_notification_bell"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_job_alert"
                    style="@style/Text.Small"
                    android:layout_marginTop="@dimen/base_padding_half"
                    android:layout_marginLeft="@dimen/base_padding_2x" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>